@@ -67,6 +67,7 @@ public class InstallCommandlet extends Commandlet {
             + "The current command will install IDEasy on your computer. Are you sure?");
       }
       ideasy.installIdeasy(cwd);
+      ideasy.setupWindowsTerminal();
       return;
     }
     ToolCommandlet commandlet = this.tool.getValue();
